--- a/src/app/components/students/dashboard/project-details/project-details.component.css
+++ b/src/app/components/students/dashboard/project-details/project-details.component.css
@@ -79,6 +79,7 @@ h2 {
 
 .button {
     height: 3rem;
+    padding: 0 1rem;
     color: #FFFFFF;
     background-color: #354F52;
     border-radius: 0px;
