--- a/src/app/components/administrator/dashboard/fair-calendar/fair-calendar.component.html
+++ b/src/app/components/administrator/dashboard/fair-calendar/fair-calendar.component.html
@@ -1,1 +1,75 @@
-<p>fair-calendar works!</p>
+<div class="row text-center">
+    <div class="col-md-4">
+      <div class="btn-group">
+          <!--
+        <div
+          class="btn btn-primary"
+          mwlCalendarPreviousView
+          [view]="view"
+          [(viewDate)]="viewDate"
+          (viewDateChange)="closeOpenMonthViewDay()"
+        >
+          Previous
+        </div>
+        <div
+          class="btn btn-outline-secondary"
+          mwlCalendarToday
+          [(viewDate)]="viewDate"
+        >
+          Today
+        </div>
+        <div
+          class="btn btn-primary"
+          mwlCalendarNextView
+          [view]="view"
+          [(viewDate)]="viewDate"
+          (viewDateChange)="closeOpenMonthViewDay()"
+        >
+          Next
+        </div>
+        -->
+      </div>
+    </div>
+    <!--
+    <div class="col-md-4">
+      <h3>{{ viewDate | calendarDate:(view + 'ViewTitle'):'en' }}</h3>
+    </div>-->
+    <div class="col-md-4">
+      <div class="btn-group">
+        <div
+          class="btn btn-primary"
+          (click)="setView(CalendarView.Month)"
+          [class.active]="view === CalendarView.Month"
+        >
+          Month
+        </div>
+        <div
+          class="btn btn-primary"
+          (click)="setView(CalendarView.Week)"
+          [class.active]="view === CalendarView.Week"
+        >
+          Week
+        </div>
+        <div
+          class="btn btn-primary"
+          (click)="setView(CalendarView.Day)"
+          [class.active]="view === CalendarView.Day"
+        >
+          Day
+        </div>
+      </div>
+    </div>
+  </div>
+  <br />
+  <div [ngSwitch]="view">
+    <mwl-calendar-month-view 
+    [viewDate]="viewDate" 
+    [events]="list_appointments" 
+    [refresh]="refresh"
+    [activeDayIsOpen]="activeDayIsOpen" 
+    (dayClicked)="dayClicked($event.day)"
+    (eventClicked)="eventClicked($event)" 
+    (eventTimesChanged)="eventTimesChanged($event)">
+    </mwl-calendar-month-view>
+  </div>
+  
