--- a/src/app/components/administrator/dashboard/fair-calendar/fair-calendar.component.css
+++ b/src/app/components/administrator/dashboard/fair-calendar/fair-calendar.component.css
@@ -1,8 +1,41 @@
-h3 {
-    margin: 0 0 10px;
-  }
+* {
+    padding: 0;
+    margin: 0;
+}
 
-  pre {
-    background-color: #f5f5f5;
-    padding: 15px;
-  }
+.flex-container {
+    overflow: scroll;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.top-navigation {
+    height: 10%;
+    margin-top: 4rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.calendar-content {
+    height: 90%;
+}
+
+.top-navigation,
+.calendar-content {
+    width: 90%;
+}
+
+mat-icon {
+    margin: 0 .5rem;
+    font-size: 40px;
+}
+
+::-webkit-scrollbar {
+    width: 0;
+    background: transparent;
+}
