--- a/src/app/components/administrator/dashboard/fair-calendar/fair-calendar.component.html
+++ b/src/app/components/administrator/dashboard/fair-calendar/fair-calendar.component.html
@@ -1,75 +1,57 @@
-<div class="row text-center">
-    <div class="col-md-4">
-      <div class="btn-group">
-          <!--
-        <div
-          class="btn btn-primary"
-          mwlCalendarPreviousView
-          [view]="view"
-          [(viewDate)]="viewDate"
-          (viewDateChange)="closeOpenMonthViewDay()"
-        >
-          Previous
+<div class="flex-container">
+    <div class="top-navigation">
+        <div class="date-title">
+            <h1>{{ viewDate | calendarDate:(view + 'ViewTitle'):'en' }}</h1>
         </div>
-        <div
-          class="btn btn-outline-secondary"
-          mwlCalendarToday
-          [(viewDate)]="viewDate"
-        >
-          Today
+        <div class="btn-group">
+            <mat-icon mwlCalendarPreviousView [view]="view" [(viewDate)]="viewDate" (viewDateChange)="closeOpenMonthViewDay()">keyboard_arrow_left</mat-icon>
+            <mat-icon mwlCalendarNextView [view]="view" [(viewDate)]="viewDate" (viewDateChange)="closeOpenMonthViewDay()">keyboard_arrow_right</mat-icon>
         </div>
-        <div
-          class="btn btn-primary"
-          mwlCalendarNextView
-          [view]="view"
-          [(viewDate)]="viewDate"
-          (viewDateChange)="closeOpenMonthViewDay()"
-        >
-          Next
-        </div>
-        -->
-      </div>
     </div>
-    <!--
-    <div class="col-md-4">
-      <h3>{{ viewDate | calendarDate:(view + 'ViewTitle'):'en' }}</h3>
-    </div>-->
-    <div class="col-md-4">
-      <div class="btn-group">
-        <div
-          class="btn btn-primary"
-          (click)="setView(CalendarView.Month)"
-          [class.active]="view === CalendarView.Month"
-        >
-          Month
-        </div>
-        <div
-          class="btn btn-primary"
-          (click)="setView(CalendarView.Week)"
-          [class.active]="view === CalendarView.Week"
-        >
-          Week
-        </div>
-        <div
-          class="btn btn-primary"
-          (click)="setView(CalendarView.Day)"
-          [class.active]="view === CalendarView.Day"
-        >
-          Day
-        </div>
-      </div>
+    <div class="calendar-content" [ngSwitch]="view">
+        <mwl-calendar-month-view [viewDate]="viewDate" [events]="events" [refresh]="refresh" [activeDayIsOpen]="activeDayIsOpen" (dayClicked)="dayClicked($event.day)" (eventTimesChanged)="eventTimesChanged($event)">
+        </mwl-calendar-month-view>
     </div>
-  </div>
-  <br />
-  <div [ngSwitch]="view">
-    <mwl-calendar-month-view 
-    [viewDate]="viewDate" 
-    [events]="list_appointments" 
-    [refresh]="refresh"
-    [activeDayIsOpen]="activeDayIsOpen" 
-    (dayClicked)="dayClicked($event.day)"
-    (eventClicked)="eventClicked($event)" 
-    (eventTimesChanged)="eventTimesChanged($event)">
-    </mwl-calendar-month-view>
-  </div>
-  
+</div>
+
+<h3>
+    Edit events
+    <button class="btn btn-primary float-right" (click)="addEvent()">
+	  Add new
+	</button>
+    <div class="clearfix"></div>
+</h3>
+
+<div class="table-responsive">
+    <table class="table table-bordered">
+        <thead>
+            <tr>
+                <th>Title</th>
+
+                <th>Starts at</th>
+                <th>Ends at</th>
+                <th>Remove</th>
+            </tr>
+        </thead>
+
+        <tbody>
+            <tr *ngFor="let event of events">
+                <td>
+                    <input type="text" class="form-control" [(ngModel)]="event.title" (keyup)="refresh.next()" />
+                </td>
+
+                <td>
+                    <input class="form-control" type="text" mwlFlatpickr [(ngModel)]="event.start" (ngModelChange)="refresh.next()" [altInput]="true" [convertModelValue]="true" [enableTime]="true" dateFormat="Y-m-dTH:i" altFormat="F j, Y H:i" placeholder="Not set" />
+                </td>
+                <td>
+                    <input class="form-control" type="text" mwlFlatpickr [(ngModel)]="event.end" (ngModelChange)="refresh.next()" [altInput]="true" [convertModelValue]="true" [enableTime]="true" dateFormat="Y-m-dTH:i" altFormat="F j, Y H:i" placeholder="Not set" />
+                </td>
+                <td>
+                    <button class="btn btn-danger" (click)="deleteEvent(event)">
+			  Delete
+			</button>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</div>
