--- a/src/app/components/administrator/dashboard/manage-users/manage-students/manage-students.component.html
+++ b/src/app/components/administrator/dashboard/manage-users/manage-students/manage-students.component.html
@@ -9,7 +9,7 @@
                     <mat-icon matSuffix>search</mat-icon>
                 </mat-form-field>
             </form>
-            <button mat-raised-button class="add-button">Agregar</button>
+            <button mat-raised-button class="add-button" routerLink="/administrator/add-students">Agregar</button>
         </div>
     </div>
     <div class="users-content">
@@ -40,7 +40,7 @@
              <ng-container matColumnDef="actions">
                 <th mat-header-cell *matHeaderCellDef></th>
                 <td mat-cell *matCellDef="let mat-icon" >
-                    <mat-icon class="btn-edit">border_color</mat-icon>                 
+                    <mat-icon class="btn-edit" routerLink="/administrator/edit-students">border_color</mat-icon>                 
                     <mat-icon class="btn-delete">clear</mat-icon>                 
                 </td>
               </ng-container>
