--- a/src/app/components/administrator/dashboard/side-bar/side-bar.component.html
+++ b/src/app/components/administrator/dashboard/side-bar/side-bar.component.html
@@ -2,18 +2,22 @@
     <div class="admin-users-options flexbox-container">
         <h3>Administracion de usuarios</h3>
         <div class="options">
-            <div class="option" *ngFor="let user_option of user_options">
-                <mat-icon class="icon">{{ user_option.icon }}</mat-icon>
-                <span>{{ user_option.text }}</span>
+            <div *ngFor="let user_option of user_options">
+                <div class="option" [routerLink]="[user_option.link]">
+                    <mat-icon class="icon">{{ user_option.icon }}</mat-icon>
+                    <span>{{ user_option.text }}</span>
+                </div>
             </div>
         </div>
     </div>
     <div class="admin-fair-options flexbox-container">
         <h3>Administracion de feria</h3>
         <div class="options">
-            <div class="option" *ngFor="let fair_option of fair_options">
-                <mat-icon class="icon">{{ fair_option.icon }}</mat-icon>
-                <span>{{ fair_option.text }}</span>
+            <div *ngFor="let fair_option of fair_options ">
+                <div class="option " [routerLink]="[fair_option.link] ">
+                    <mat-icon class="icon ">{{ fair_option.icon }}</mat-icon>
+                    <span>{{ fair_option.text }}</span>
+                </div>
             </div>
         </div>
     </div>
