--- a/src/app/components/administrator/dashboard/manage-users/manage-judges/manage-judges.component.html
+++ b/src/app/components/administrator/dashboard/manage-users/manage-judges/manage-judges.component.html
@@ -34,14 +34,14 @@
                 <th mat-header-cell *matHeaderCellDef> Institución </th>
                 <td mat-cell *matCellDef="let element"> {{element.institution}} </td>
             </ng-container>
-             <!--Buttons-->
-             <ng-container matColumnDef="actions">
+            <!--Buttons-->
+            <ng-container matColumnDef="actions">
                 <th mat-header-cell *matHeaderCellDef></th>
-                <td mat-cell *matCellDef="let mat-icon" >
-                    <mat-icon class="btn-edit" routerLink="/administrator/edit-judges">border_color</mat-icon>                 
-                    <mat-icon onclick="dialogDelete()" class="btn-delete">clear</mat-icon>                 
+                <td mat-cell *matCellDef="let mat-icon">
+                    <mat-icon class="btn-edit" routerLink="/administrator/edit-judges">border_color</mat-icon>
+                    <mat-icon (click)="dialogDelete()" class="btn-delete">clear</mat-icon>
                 </td>
-              </ng-container>
+            </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
