--- a/src/app/components/administrator/dashboard/manage-users/manage-students/manage-students.component.html
+++ b/src/app/components/administrator/dashboard/manage-users/manage-students/manage-students.component.html
@@ -36,14 +36,14 @@
             </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-             <!--Buttons-->
-             <ng-container matColumnDef="actions">
+            <!--Buttons-->
+            <ng-container matColumnDef="actions">
                 <th mat-header-cell *matHeaderCellDef></th>
-                <td mat-cell *matCellDef="let mat-icon" >
-                    <mat-icon class="btn-edit" routerLink="/administrator/edit-students">border_color</mat-icon>                 
-                    <mat-icon class="btn-delete">clear</mat-icon>                 
+                <td mat-cell *matCellDef="let mat-icon">
+                    <mat-icon class="btn-edit" routerLink="/administrator/edit-students">border_color</mat-icon>
+                    <mat-icon (click)="dialogDelete()" class="btn-delete">clear</mat-icon>
                 </td>
-              </ng-container>
+            </ng-container>
         </table>
     </div>
 </div>
