Improve on look and feel of the code

--- a/src/app/components/administrator/dashboard/add-events-dialog/add-events-dialog.component.html
+++ b/src/app/components/administrator/dashboard/add-events-dialog/add-events-dialog.component.html
@@ -1,10 +1,37 @@
-<div>
-   <h3>
-    <button class="btn btn-primary float-right" (click)="addEvent()">Agregar evento</button>
-    <div class="clearfix"></div>
-</h3> 
+<div class="table-responsive">
+    <table class="table table-bordered">
+        <thead>
+            <tr>
+                <th>Title</th>
+                <th>Starts at</th>
+                <th>Ends at</th>
+                <th>Remove</th>
+            </tr>
+        </thead>
+
+        <tbody>
+            <tr *ngFor="let event of events">
+                <td>
+                    <input type="text" class="form-control" [(ngModel)]="event.title" (keyup)="refresh.next()" />
+                </td>
+                <td>
+                    <input class="form-control" type="text" mwlFlatpickr [(ngModel)]="event.start" (ngModelChange)="refresh.next()" [altInput]="true" [convertModelValue]="true" [enableTime]="true" dateFormat="Y-m-dTH:i" altFormat="F j, Y H:i" placeholder="Not set" />
+                </td>
+                <td>
+                    <input class="form-control" type="text" mwlFlatpickr [(ngModel)]="event.end" (ngModelChange)="refresh.next()" [altInput]="true" [convertModelValue]="true" [enableTime]="true" dateFormat="Y-m-dTH:i" altFormat="F j, Y H:i" placeholder="Not set" />
+                </td>
+                <td>
+                    <button class="btn btn-danger" (click)="deleteEvent(event)">
+              Delete
+            </button>
+                </td>
+            </tr>
+        </tbody>
+    </table>
 </div>
-<div>
+
+
+<!-- <div>
     <table class="table table-bordered">
         <thead>
             <tr>
@@ -32,8 +59,7 @@
         </tbody>
     </table>
 </div>
-    <div>
+<div>
     <button mat-button mat-dialog-close>Agregar</button>
     <button mat-button (click)="onNoClick()">Cancelar</button>
-    </div>
-
+</div> -->
