--- a/src/app/components/judges/dashboard/side-bar/side-bar.component.html
+++ b/src/app/components/judges/dashboard/side-bar/side-bar.component.html
@@ -1,1 +1,11 @@
-<p>side-bar works!</p>
+<div class="side-bar-menu">
+    <div class="admin-users-options flexbox-container">
+        <h3>Administracion de usuarios</h3>
+        <div class="options">
+            <div class="option" *ngFor="let user_option of user_options">
+                <mat-icon class="icon">{{ user_option.icon }}</mat-icon>
+                <span>{{ user_option.text }}</span>
+            </div>
+        </div>        
+    </div>    
+</div>
