Add route navigation between the components

--- a/src/app/components/judges/dashboard/project-to-qualify-details/project-to-qualify-details.component.html
+++ b/src/app/components/judges/dashboard/project-to-qualify-details/project-to-qualify-details.component.html
@@ -29,9 +29,9 @@
         <div class="details-content">
             <h3 class="space">Seleccione alguna de las 3 opciones a continuación: </h3>
             <div class="button-group space">
-                <button class="button" mat-raised-button>Calificar proyecto</button>
+                <button class="button" mat-raised-button [routerLink]="['/judges/project-qualify/1']">Calificar proyecto</button>
                 <button class="button" mat-raised-button (click)="openRecomendation()">Dar recomendación</button>
-                <button class="button" mat-raised-button (click)="openEmails()" >Contactar estudiantes</button>
+                <button class="button" mat-raised-button (click)="openEmails()">Contactar estudiantes</button>
             </div>
         </div>
     </div>
