--- a/src/app/components/judges/dashboard/side-bar/side-bar.component.html
+++ b/src/app/components/judges/dashboard/side-bar/side-bar.component.html
@@ -2,9 +2,11 @@
     <div class="admin-users-options flexbox-container">
         <h3>Calificar Proyectos</h3>
         <div class="options">
-            <div class="option" *ngFor="let user_option of user_options">
-                <mat-icon class="icon">{{ user_option.icon }}</mat-icon>
-                <span>{{ user_option.text }}</span>
+            <div *ngFor="let user_option of user_options">
+                <div class="option" [routerLink]="['list-project']">
+                    <mat-icon class="icon">{{ user_option.icon }}</mat-icon>
+                    <span>{{ user_option.text }}</span>
+                </div>
             </div>
         </div>
     </div>
