FInal details, improve look and feel.

--- a/src/app/components/judges/dashboard/top-menu/top-menu.component.html
+++ b/src/app/components/judges/dashboard/top-menu/top-menu.component.html
@@ -11,7 +11,7 @@
                 <mat-divider></mat-divider>
                 <span>{{ user_role }}</span>
             </div>
-            <mat-icon class="icon">settings</mat-icon>
+            <mat-icon [routerLink]="['settings']" class="icon">settings</mat-icon>
         </div>
     </div>
 </div>
