--- a/src/app/components/students/dashboard/current-proyect-proposals/current-proyect-proposals.component.html
+++ b/src/app/components/students/dashboard/current-proyect-proposals/current-proyect-proposals.component.html
@@ -21,6 +21,10 @@
                 <th mat-header-cell *matHeaderCellDef> Descripcion </th>
                 <td mat-cell *matCellDef="let element"> {{element.description}} </td>
             </ng-container>
+            <ng-container matColumnDef="grade">
+                <th mat-header-cell *matHeaderCellDef> Calification </th>
+                <td mat-cell *matCellDef="let element"> {{element.grade}} </td>
+            </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
