--- a/src/app/components/administrator/dashboard/edit-users/edit-judges/edit-judges.component.html
+++ b/src/app/components/administrator/dashboard/edit-users/edit-judges/edit-judges.component.html
@@ -19,7 +19,7 @@
             <mat-label>Correo del juez</mat-label>
             <input type="email" matInput formControlName="EmailFormControl" placeholder="Ej. smith@gmail.com">
         </mat-form-field>
-        <!--for password-->
+        <!--for username-->
         <mat-form-field class="flex-container" appearance="fill">
             <mat-label>Nombre de usuario del juez</mat-label>
             <input type="text" matInput formControlName="UsernameFormControl">
