--- a/src/app/components/administrator/dashboard/edit-users/edit-professors/edit-professors.component.html
+++ b/src/app/components/administrator/dashboard/edit-users/edit-professors/edit-professors.component.html
@@ -3,7 +3,7 @@
         <h1>Editar Profesor</h1>
         <h3>Edita los datos del profesor seleccionado</h3>
       </div>
-      <form class="add-form">
+      <form class="add-form" [formGroup]="adminForm">
 
         <!--for name-->
         <mat-form-field class="flex-container" appearance="fill">
