--- a/src/app/components/administrator/dashboard/edit-users/edit-students/edit-students.component.html
+++ b/src/app/components/administrator/dashboard/edit-users/edit-students/edit-students.component.html
@@ -7,50 +7,30 @@
         <mat-form-field class="flex-container" appearance="fill">
         <!--for name-->
           <mat-label>Nombre del estudiante</mat-label>
-          <input type="name" matInput [formControl]="NameFormControl" [errorStateMatcher]="matcher">
-          <mat-error *ngIf=" NameFormControl.hasError('required')">
-            <strong>Por favor digita nombre del estudiante</strong>
-          </mat-error>
+          <input type="name" matInput formControlName="NameFormControl">
         </mat-form-field>
         <!--for last-->
         <mat-form-field class="flex-container" appearance="fill"> 
           <mat-label>Apellidos del estudiante</mat-label>
-          <input type="last" matInput [formControl]="LastFormControl" [errorStateMatcher]="matcher">
-          <mat-error *ngIf=" LastFormControl.hasError('required')">
-            <strong>Por favor digita los apellidos del estudiante</strong>
-          </mat-error>
+          <input type="last" matInput formControlName="LastFormControl">
         </mat-form-field>
           <!--for email-->
           <mat-form-field class="flex-container" appearance="fill">
             <mat-label>Correo del estudiante</mat-label>
-          <input type="email" matInput [formControl]="EmailFormControl" [errorStateMatcher]="matcher"
-                 placeholder="Ej. smith@gmail.com">
-          <mat-error *ngIf="EmailFormControl.hasError('email') && !EmailFormControl.hasError('required')">
-            Por favor digita un correo valido
-          </mat-error>
-           <mat-error *ngIf="EmailFormControl.hasError('required')">
-            <strong>Por favor digita el correo del estudiante</strong>
-          </mat-error>
+          <input type="email" matInput formControlName="EmailFormControl" placeholder="Ej. smith@gmail.com">
           </mat-form-field>
-          <!--for password-->
-          <mat-form-field class="flex-container" appearance="fill">
-           <mat-label>Contraseña del estudiante</mat-label>
-          <input type="last" matInput [formControl]="PasswordFormControl" [errorStateMatcher]="matcher">
-          <mat-error *ngIf=" PasswordFormControl.hasError('required')">
-            <strong>Por favor digita la contraseña temporal del estudiante</strong>
-          </mat-error>
-          </mat-form-field>
+          <!--for username-->
+        <mat-form-field class="flex-container" appearance="fill">
+          <mat-label>Nombre de usuario del estudiante</mat-label>
+          <input type="text" matInput formControlName="UsernameFormControl">
+      </mat-form-field>
           <!--for id-->
           <mat-form-field class="flex-container" appearance="fill">
            <mat-label>Cédula del estudiante</mat-label>
-          <input type="id" matInput [formControl]="IdFormControl" [errorStateMatcher]="matcher"
-                 placeholder="XX-XXXX-XXXX">
-          <mat-error *ngIf="IdFormControl.hasError('required')">
-             <strong>Por favor digita la cédula del estudiante</strong>
-          </mat-error>
+          <input type="id" matInput formControlName="IdFormControl" placeholder="XX-XXXX-XXXX">
           </mat-form-field>
       </form>
       <div >
-          <button mat-raised-button class="add-button">Editar Estudiante</button>
+          <button mat-raised-button id="sumbit-button" class="add-button">Editar Estudiante</button>
       </div>
   </div>
