--- a/src/app/components/administrator/dashboard/manage-users/manage-professors/manage-professors.component.html
+++ b/src/app/components/administrator/dashboard/manage-users/manage-professors/manage-professors.component.html
@@ -18,7 +18,7 @@
                 <th mat-header-cell *matHeaderCellDef> Nombre </th>
                 <td mat-cell *matCellDef="let element"> {{element.name}} </td>
             </ng-container>
-            <ng-container matColumnDef="last">
+            <ng-container matColumnDef="lastname">
                 <th mat-header-cell *matHeaderCellDef> Apellido </th>
                 <td mat-cell *matCellDef="let element"> {{element.last}} </td>
             </ng-container>
@@ -26,7 +26,7 @@
                 <th mat-header-cell *matHeaderCellDef> Correo </th>
                 <td mat-cell *matCellDef="let element"> {{element.email}} </td>
             </ng-container>
-            <ng-container matColumnDef="phone">
+            <ng-container matColumnDef="phoneNumber">
                 <th mat-header-cell *matHeaderCellDef> Telefono </th>
                 <td mat-cell *matCellDef="let element"> {{element.phone}} </td>
             </ng-container>
