--- a/src/app/components/administrator/dashboard/manage-users/manage-students/manage-students.component.html
+++ b/src/app/components/administrator/dashboard/manage-users/manage-students/manage-students.component.html
@@ -18,7 +18,7 @@
                 <th mat-header-cell *matHeaderCellDef> Nombre </th>
                 <td mat-cell *matCellDef="let element"> {{element.name}} </td>
             </ng-container>
-            <ng-container matColumnDef="last">
+            <ng-container matColumnDef="lastname">
                 <th mat-header-cell *matHeaderCellDef> Apellido </th>
                 <td mat-cell *matCellDef="let element"> {{element.last}} </td>
             </ng-container>
@@ -26,7 +26,7 @@
                 <th mat-header-cell *matHeaderCellDef> Correo </th>
                 <td mat-cell *matCellDef="let element"> {{element.email}} </td>
             </ng-container>
-            <ng-container matColumnDef="phone">
+            <ng-container matColumnDef="phoneNumber">
                 <th mat-header-cell *matHeaderCellDef> Telefono </th>
                 <td mat-cell *matCellDef="let element"> {{element.phone}} </td>
             </ng-container>
@@ -39,11 +39,13 @@
             <!--Buttons-->
             <ng-container matColumnDef="actions">
                 <th mat-header-cell *matHeaderCellDef></th>
-                <td mat-cell *matCellDef="let mat-icon">
-                    <mat-icon class="btn-edit" routerLink="/administrator/edit-students">border_color</mat-icon>
-                    <mat-icon (click)="dialogDelete()" class="btn-delete">clear</mat-icon>
+                <td mat-cell *matCellDef="let element">
+                    <mat-icon class="btn-edit" [routerLink]="['/administrator/edit-students', element.email]">border_color</mat-icon>
+                    <mat-icon (click)="dialogDelete(element.email)" class="btn-delete">clear</mat-icon>
                 </td>
             </ng-container>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
     </div>
 </div>
