--- a/src/app/components/administrator/dashboard/edit-users/edit-professors/edit-professors.component.html
+++ b/src/app/components/administrator/dashboard/edit-users/edit-professors/edit-professors.component.html
@@ -2,42 +2,39 @@
     <div class="top-options">
         <h1>Editar Profesor</h1>
         <h3>Edita los datos del profesor seleccionado</h3>
-      </div>
-      <form class="add-form" [formGroup]="adminForm">
+    </div>
+    <form class="add-form" [formGroup]="adminForm" (ngSubmit)="onSubmit()">
 
         <!--for name-->
         <mat-form-field class="flex-container" appearance="fill">
-          <mat-label>Nombre del profesor</mat-label>
-          <input type="name" matInput formControlName="LastFormControl">
+            <mat-label>Nombre del profesor</mat-label>
+            <input type="name" matInput formControlName="LastFormControl">
         </mat-form-field>
         <!--for last-->
-        <mat-form-field class="flex-container" appearance="fill"> 
-          <mat-label>Apellidos del profesor</mat-label>
-          <input type="last" matInput formControlName="LastFormControl">
+        <mat-form-field class="flex-container" appearance="fill">
+            <mat-label>Apellidos del profesor</mat-label>
+            <input type="last" matInput formControlName="LastFormControl">
         </mat-form-field>
         <!--for email-->
         <mat-form-field class="flex-container" appearance="fill">
-          <mat-label>Correo del profesor</mat-label>
-          <input type="email" matInput formControlName="EmailFormControl" placeholder="Ej. smith@gmail.com">
+            <mat-label>Correo del profesor</mat-label>
+            <input type="email" matInput formControlName="EmailFormControl" placeholder="Ej. smith@gmail.com">
         </mat-form-field>
-         <!--for username-->
+        <!--for username-->
         <mat-form-field class="flex-container" appearance="fill">
-          <mat-label>Nombre de usuario del profesor</mat-label>
-          <input type="name" matInput formControlName="UsernameFormControl">
+            <mat-label>Nombre de usuario del profesor</mat-label>
+            <input type="name" matInput formControlName="UsernameFormControl">
         </mat-form-field>
         <!--for id-->
         <mat-form-field class="flex-container" appearance="fill">
-          <mat-label>Cédula del profesor</mat-label>
-         <input type="id" matInput formControlName="IdFormControl" placeholder="XX-XXXX-XXXX">
-         </mat-form-field>
+            <mat-label>Cédula del profesor</mat-label>
+            <input type="id" matInput formControlName="IdFormControl" placeholder="XX-XXXX-XXXX">
+        </mat-form-field>
         <!--for phone number
         <mat-form-field class="flex-container" appearance="fill">
           <mat-label>Numero de teléfono del profesor</mat-label>
           <input type="last" matInput formControl="PhoneNumberFormControl" placeholder="88888888">
         </mat-form-field>-->
-          
-      </form>
-      <div >
-          <button mat-raised-button id="sumbit-button" class="add-button">Editar Profesor</button>
-      </div>
-  </div>
+        <button mat-raised-button id="sumbit-button" class="add-button">Editar Profesor</button>
+    </form>
+</div>
