--- a/src/app/components/administrator/dashboard/manage-users/manage-students/manage-students.component.html
+++ b/src/app/components/administrator/dashboard/manage-users/manage-students/manage-students.component.html
@@ -13,39 +13,39 @@
         </div>
     </div>
     <div class="users-content">
-        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+        <!-- <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
             <ng-container matColumnDef="name">
                 <th mat-header-cell *matHeaderCellDef> Nombre </th>
                 <td mat-cell *matCellDef="let element"> {{element.name}} </td>
             </ng-container>
             <ng-container matColumnDef="lastname">
                 <th mat-header-cell *matHeaderCellDef> Apellido </th>
-                <td mat-cell *matCellDef="let element"> {{element.last}} </td>
+                <td mat-cell *matCellDef="let element"> {{element.lastname}} </td>
             </ng-container>
             <ng-container matColumnDef="email">
                 <th mat-header-cell *matHeaderCellDef> Correo </th>
                 <td mat-cell *matCellDef="let element"> {{element.email}} </td>
             </ng-container>
-            <ng-container matColumnDef="phoneNumber">
+             <ng-container matColumnDef="phoneNumber">
                 <th mat-header-cell *matHeaderCellDef> Telefono </th>
-                <td mat-cell *matCellDef="let element"> {{element.phone}} </td>
+                <td mat-cell *matCellDef="let element"> {{element.phoneNumber}} </td>
             </ng-container>
-            <ng-container matColumnDef="project">
-                <th mat-header-cell *matHeaderCellDef> Proyecto </th>
-                <td mat-cell *matCellDef="let element"> {{element.project}} </td>
-            </ng-container>
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-            <!--Buttons-->
-            <ng-container matColumnDef="actions">
-                <th mat-header-cell *matHeaderCellDef></th>
-                <td mat-cell *matCellDef="let element">
-                    <mat-icon class="btn-edit" [routerLink]="['/administrator/edit-students', element.email]">border_color</mat-icon>
-                    <mat-icon (click)="dialogDelete(element.email)" class="btn-delete">clear</mat-icon>
-                </td>
-            </ng-container>
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
+        <ng-container matColumnDef="proyecto">
+            <th mat-header-cell *matHeaderCellDef> Proyecto </th>
+            <td mat-cell *matCellDef="let element"> {{element.project}} </td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        Buttons
+        <ng-container matColumnDef="actions">
+            <th mat-header-cell *matHeaderCellDef></th>
+            <td mat-cell *matCellDef="let element">
+                <mat-icon class="btn-edit" [routerLink]="['/administrator/edit-students', element.email]">border_color</mat-icon>
+                <mat-icon (click)="dialogDelete(element.email)" class="btn-delete">clear</mat-icon>
+            </td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table> -->
     </div>
 </div>
