--- a/src/app/components/administrator/dashboard/manage-users/manage-professors/manage-professors.component.html
+++ b/src/app/components/administrator/dashboard/manage-users/manage-professors/manage-professors.component.html
@@ -20,7 +20,7 @@
             </ng-container>
             <ng-container matColumnDef="lastname">
                 <th mat-header-cell *matHeaderCellDef> Apellido </th>
-                <td mat-cell *matCellDef="let element"> {{element.last}} </td>
+                <td mat-cell *matCellDef="let element"> {{element.lastname}} </td>
             </ng-container>
             <ng-container matColumnDef="email">
                 <th mat-header-cell *matHeaderCellDef> Correo </th>
@@ -28,7 +28,7 @@
             </ng-container>
             <ng-container matColumnDef="phoneNumber">
                 <th mat-header-cell *matHeaderCellDef> Telefono </th>
-                <td mat-cell *matCellDef="let element"> {{element.phone}} </td>
+                <td mat-cell *matCellDef="let element"> {{element.phoneNumber}} </td>
             </ng-container>
 
             <!--Buttons-->
