--- a/src/app/components/administrator/dashboard/edit-users/edit-judges/edit-judges.component.html
+++ b/src/app/components/administrator/dashboard/edit-users/edit-judges/edit-judges.component.html
@@ -4,28 +4,28 @@
         <h3>Edita los datos necesarios del juez seleccionado</h3>
     </div>
     <form class="add-form" [formGroup]="judgeForm" (ngSubmit)="onSubmit()">
-        <mat-form-field class="flex-container" appearance="fill">
+        <mat-form-field class="flex-container" appearance="outline">
             <!--for name-->
             <mat-label>Nombre del juez</mat-label>
             <input type="text" matInput formControlName="NameFormControl">
         </mat-form-field>
         <!--for last-->
-        <mat-form-field class="flex-container" appearance="fill">
+        <mat-form-field class="flex-container" appearance="outline">
             <mat-label>Apellidos del juez</mat-label>
             <input type="text" matInput formControlName="LastFormControl">
         </mat-form-field>
         <!--for email-->
-        <mat-form-field class="flex-container" appearance="fill">
+        <mat-form-field class="flex-container" appearance="outline">
             <mat-label>Correo del juez</mat-label>
             <input type="email" matInput formControlName="EmailFormControl" placeholder="Ej. smith@gmail.com">
         </mat-form-field>
         <!--for username-->
-        <mat-form-field class="flex-container" appearance="fill">
+        <mat-form-field class="flex-container" appearance="outline">
             <mat-label>Nombre de usuario del juez</mat-label>
             <input type="text" matInput formControlName="UsernameFormControl">
         </mat-form-field>
         <!--for id-->
-        <mat-form-field class="flex-container" appearance="fill">
+        <mat-form-field class="flex-container" appearance="outline">
             <mat-label>Cédula del juez</mat-label>
             <input type="text" matInput formControlName="IdFormControl" placeholder="XX-XXXX-XXXX">
         </mat-form-field>
