--- a/src/app/components/administrator/dashboard/manage-users/manage-students/manage-students.component.html
+++ b/src/app/components/administrator/dashboard/manage-users/manage-students/manage-students.component.html
@@ -4,7 +4,7 @@
         <div class="sub-container">
             <form class="example-form">
                 <mat-form-field class="example-full-width" appearance="outline">
-                    <mat-label>Buscar jueces</mat-label>
+                    <mat-label>Buscar estudiantes</mat-label>
                     <input type="text" matInput placeholder="Ingrese nombre del estudiante">
                     <mat-icon matSuffix>search</mat-icon>
                 </mat-form-field>
@@ -13,7 +13,7 @@
         </div>
     </div>
     <div class="users-content">
-        <!-- <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
             <ng-container matColumnDef="name">
                 <th mat-header-cell *matHeaderCellDef> Nombre </th>
                 <td mat-cell *matCellDef="let element"> {{element.name}} </td>
@@ -26,26 +26,20 @@
                 <th mat-header-cell *matHeaderCellDef> Correo </th>
                 <td mat-cell *matCellDef="let element"> {{element.email}} </td>
             </ng-container>
-             <ng-container matColumnDef="phoneNumber">
+            <ng-container matColumnDef="phoneNumber">
                 <th mat-header-cell *matHeaderCellDef> Telefono </th>
                 <td mat-cell *matCellDef="let element"> {{element.phoneNumber}} </td>
             </ng-container>
-        <ng-container matColumnDef="proyecto">
-            <th mat-header-cell *matHeaderCellDef> Proyecto </th>
-            <td mat-cell *matCellDef="let element"> {{element.project}} </td>
-        </ng-container>
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        Buttons
-        <ng-container matColumnDef="actions">
-            <th mat-header-cell *matHeaderCellDef></th>
-            <td mat-cell *matCellDef="let element">
-                <mat-icon class="btn-edit" [routerLink]="['/administrator/edit-students', element.email]">border_color</mat-icon>
-                <mat-icon (click)="dialogDelete(element.email)" class="btn-delete">clear</mat-icon>
-            </td>
-        </ng-container>
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table> -->
+            <!--Buttons-->
+            <ng-container matColumnDef="actions">
+                <th mat-header-cell *matHeaderCellDef></th>
+                <td mat-cell *matCellDef="let element">
+                    <mat-icon class="btn-edit" [routerLink]="['/administrator/edit-students', element.email]">border_color</mat-icon>
+                    <mat-icon (click)="dialogDelete(element.email)" class="btn-delete">clear</mat-icon>
+                </td>
+            </ng-container>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
     </div>
 </div>
