--- a/src/app/components/administrator/dashboard/manage-users/manage-professors/manage-professors.component.html
+++ b/src/app/components/administrator/dashboard/manage-users/manage-professors/manage-professors.component.html
@@ -5,7 +5,7 @@
             <form class="example-form">
                 <mat-form-field class="example-full-width" appearance="outline">
                     <mat-label>Buscar Profesores</mat-label>
-                    <input type="text" matInput placeholder="Ingrese nombre del profesor">
+                    <input type="text" matInput (keyup)="applyFilter($event)" placeholder="Ingrese nombre del profesor">
                     <mat-icon matSuffix>search</mat-icon>
                 </mat-form-field>
             </form>
