--- a/src/app/components/administrator/dashboard/side-bar/side-bar.component.css
+++ b/src/app/components/administrator/dashboard/side-bar/side-bar.component.css
@@ -8,15 +8,21 @@
     height: 100%;
     width: 100%;
     padding-left: 2rem;
+    padding: 2rem auto;
 }
 
 .admin-users-options {
-    height: 30%;
+    height: 25%;
     width: 100%;
 }
 
 .admin-fair-options {
-    height: 40%;
+    height: 22%;
+    width: 100%;
+}
+
+.admin-general-options{
+    height: 20%;
     width: 100%;
 }
 
