--- a/src/app/components/admin/auth/login/login.component.html
+++ b/src/app/components/admin/auth/login/login.component.html
@@ -11,7 +11,7 @@
                     <input matInput type="password" formControlName="password">
                 </mat-form-field>
                 <br>
-                <a id="forgot-redirect" class="full-width" [routerLink]="['/auth', 'forgot']">Forgot password?</a> </div>
+                <a id="forgot-redirect" class="full-width" [routerLink]="['/auth', 'forget-password']">Forgot password?</a> </div>
         </div>
         <button id="sumbit-button" class="" mat-raised-button color="primary">Sign In</button>
     </form>
